force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/NEST_Ascensus_Advisor_CRD_Record__c.object-meta.xml
<CustomObject>
    <description>One of two NEST Ascensus-specific record sources. This record source is for the NEST Advisor plan; brokers with CRDs usually, and that CRD acts as the Salesforce record name.</description>
    <label>NEST Ascensus Advisor CRD Record</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NEST Ascensus Advisor CRD Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEST Ascensus Advisor CRD Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>