force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Branch_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>