force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>