force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Branch_Phone__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Phone</label>
    <type>Phone</type>
</CustomField>