force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Branch_State__c.field-meta.xml
<CustomField>
    <fullName>Branch_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>