force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Branch_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Street Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>