force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Branch_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Zip Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>