force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>CRD_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CRD Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>