force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>