force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Rep_County__c.field-meta.xml
<CustomField>
    <fullName>Rep_County__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>