force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Rep_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Phone</label>
    <type>Phone</type>
</CustomField>