force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Rep_State__c.field-meta.xml
<CustomField>
    <fullName>Rep_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>