force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Rep_Trading_ID__c.field-meta.xml
<CustomField>
    <fullName>Rep_Trading_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Trading ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>