force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Rep_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>