force-app/main/default/objects/NEST_Ascensus_Advisor_CRD_Record__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>